--- a/Coworking.Ap.Application/Coworking.Ap.Application.csproj
+++ b/Coworking.Ap.Application/Coworking.Ap.Application.csproj
@@ -1,12 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Filters\" />
-  </ItemGroup>
-
 
 </Project>
