se crean las entidades y los modelos de la base de datos, tambien se cargan las tablas a la base de datos

--- a/Coworking.Api/appsettings.json
+++ b/Coworking.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DataBaseConnection": "Server=DESKTOP-S5LN986\\MSSQLSERVER01;Database=Coworkingk;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
