--- a/Coworking.Api.DataAccess.Contracts/Coworking.Api.DataAccess.Contracts.csproj
+++ b/Coworking.Api.DataAccess.Contracts/Coworking.Api.DataAccess.Contracts.csproj
@@ -5,9 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
     <Folder Include="Enum\" />
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
